# selective-revocation-replay

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
appendix/: motivating_example.md  non_goals_and_assumptions.md  task_chain_catalog.yaml  terminology.md
artifact/: README.md  environment.txt  generated_manifest.json  runbook.md
configs/: eval_matrix.yaml  model_heuristic.yaml  model_ollama_qwen25_14b.yaml  model_ollama_qwen25_32b.yaml  model_qwen25_7b.yaml  model_qwen27b.yaml  models.yaml  paths.yaml  runtime_retrieval.yaml  runtime_summary.yaml
paper/: refs.bib
paper/tables/: tbl1_main_results.csv  tbl2_attack_breakdown.csv  tbl4_fallback_and_cost.csv
paper/usenix_security26/: artifact_table.tex  build.ps1  live_table.tex  main.tex  usenix.sty
prompts/: act_v1.jinja  memory_writer_v1.jinja  summary_writer_v1.jinja
results/model_pilots/: live_confirmation_latest.csv  (+2 more)
scripts/: _bootstrap.py  apply_method.py  build_paper_artifacts.py  build_workspace.py  check_local_qwen.py  check_ollama_backend.py  export_latex_tables.py  make_figures.py  make_tables.py  run_base_history.py  run_eval_matrix.py  run_live_confirmation_batch.py  run_live_model_gate.py
src/: __init__.py  agent_loop.py  baselines.py  checkpoint.py  env_workspace.py  figures.py  ids.py  llm_backend.py  ollama_runtime.py  pipeline.py  prompts.py  qwen_runtime.py  recover.py  retrieval.py  schemas.py  scoring.py  store.py  utils.py  writers.py
tests/: test_local_qwen_helpers.py  test_model_selection.py  test_ollama_backend.py  test_runtime_smoke.py
(+60 files in other folders)
